--- a/game_page.html
+++ b/game_page.html
@@ -24,6 +24,9 @@
 		<div id="output" class="col-lg-6"> </div>
 		<br>
 		<br>
+		<br>
+		<br>
+		<h1>NOTE: Make sure that your opponent is not watching you was you type your word!</h1>
 		<label>Send Your Word: <b style="color: red">Try putting a word which has 5 or more characters to challenge your opponent!
 		</b>
 		</label>
